--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pyheif==0.7.1
 python-multipart==0.0.6
 exifread==3.0.0
 watchdog==3.0.0
-pydantic==2.5.2
+pydantic==2.7.0
 python-dotenv==1.0.0
-aiofiles==23.2.1 
+aiofiles==23.2.1
+opencv-python==4.8.1.78 
