--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.104.1
 uvicorn==0.24.0
 sqlalchemy==2.0.23
 pillow==10.1.0
+pillow-heif==0.15.0
 pyheif==0.7.1
 python-multipart==0.0.6
 exifread==3.0.0
@@ -9,4 +10,6 @@ watchdog==3.0.0
 pydantic==2.7.0
 python-dotenv==1.0.0
 aiofiles==23.2.1
-opencv-python==4.8.1.78 
+opencv-python==4.8.1.78
+NumPy==1.24.3
+pydantic-settings==2.2.1 
