修复初始化BUG.优化了一点小UI体验

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,12 @@ services:
     ports:
       - "5173:5173"
     volumes:
-      -  /Users/zingliu/Code/SimplePhotos/data:/app/data
+      - ${PWD}/data:/app/data
     environment:
       - NODE_ENV=production
       - LANG=zh_CN.UTF-8
       - LC_ALL=zh_CN.UTF-8
+      - DATA_ROOT=/app/data
 
 volumes:
   data:
