--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.14.0",
     "react-router-dom": "^7.1.0",
     "react-swipeable": "^7.0.1",
